fix event CSS overflow issue

--- a/src/common/common.css
+++ b/src/common/common.css
@@ -163,6 +163,7 @@ a.fc-event,
 
 .fc-event-inner {
 	width: 100%;
+	height: 100%;
 	overflow: hidden;
 	}
 	
